--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EBAC</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="app.js"></script>
+    <nav>
+        <p class="title-nav">EBAC</p>
+        <p></p>
+    </nav>
+    <p class="subtitle">REGISTRO DE ALUMNOS EBAC</p>
+
+    <form action="">
+        <input type="text" name="name-user" placeholder="Nombre del alumno" id="">
+        <input type="text" name="edad-user" placeholder="Edad del alumno" id="">
+        <input type="text" name="localidad" placeholder="Localidad" id="">
+        <input type="text" name="curso" placeholder="Curso" id="">
+        <input type="text" name="email" placeholder="Email" id="">
+        <button>ENVIAR</button>
+    </form>
+
+    <!--<script src="app.js"></script>-->
 </body>
 </html>
