--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
         <p class="title-nav">EBAC</p>
         <p></p>
     </nav>
+
     <p class="subtitle">REGISTRO DE ALUMNOS EBAC</p>
 
-    <form action="">
-        <input type="text" name="name-user" placeholder="Nombre del alumno" id="">
-        <input type="text" name="edad-user" placeholder="Edad del alumno" id="">
-        <input type="text" name="localidad" placeholder="Localidad" id="">
-        <input type="text" name="curso" placeholder="Curso" id="">
-        <input type="text" name="email" placeholder="Email" id="">
-        <button>ENVIAR</button>
+    <button id="add-button">Agregar</button>
+    <button id="consult-button">Consultar</button>
+    <button id="delete-button">Eliminar</button>
+
+
+    <form id="registration-form">
+        <input type="text" name="name-user" placeholder="Nombre del alumno" id="name-input">
+        <input type="text" name="edad-user" placeholder="Edad del alumno" id="age-input">
+        <input type="text" name="localidad" placeholder="Localidad" id="locality-input">
+        <input type="text" name="curso" placeholder="Curso" id="course-input">
+        <input type="text" name="email" placeholder="Email" id="email-input">
+        
+        <button type="submit">ENVIAR</button>
     </form>
 
-    <!--<script src="app.js"></script>-->
+    <script src="app.js"></script>
 </body>
 </html>
